[package]
name = "snaptik-bot"
description = "This bot can reply to a message with link to tiktok video with video file"
repository = "https://github.com/Ty3uK/snaptik-bot"
license = "MIT"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
worker = "0.0.18"
serde = "1"
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
url = "2"
regex = "1"
lazy_static = "1"
console_error_panic_hook = { version = "0.1", optional = true }
cfg-if = "1.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
